# icms-normal-ce

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
src/sefaz_ce/: __init__.py  automacao_sefaz_ce.py  configuracoes.py  excel_filiais.py  gui_app.py  logger.py  main.py  resolver_captcha.py
src/sefaz_ce/navegacao/: __init__.py  acoes_pagina.py
